--- a/src/fields/lx-select-img.html
+++ b/src/fields/lx-select-img.html
@@ -11,7 +11,7 @@
 
 		<lx-select-choices>
 			<div class="block imagePicker">
-				<img src="http://beng.kissthefrog.lan/expContent/{{$choice}}" height="50" class="selectimg" err-src="img/placeholder_face.svg"
+				<img ng-src="{{filepath }}{{$choice}}" height="50" class="selectimg" err-src="img/placeholder_img.svg"
 				/>
 				<h5>{{ $choice }}</h5>
 			</div>
