--- a/src/fields/lx-checkbox.html
+++ b/src/fields/lx-checkbox.html
@@ -1,9 +1,6 @@
 <div class="checkbox">
-	<input ng-model="model[options.key]"
-	       type="checkbox"
-	       role="checkbox"
-	       class="checkbox__input">
-	<label for={{::id}} class="checkbox__label" aria-label="{{::to.label}}">{{to.label}}</label>
-	<span ng-if="::to.description"
-	      class="checkbox__help">{{::to.description}}</span>
+	<lx-checkbox ng-model="model[options.key]">
+	<lx-checkbox-label for={{::id}} class="checkbox__label" aria-label="{{::to.label}}">{{to.label}}</lx-checkbox-label>
+	<lx-checkbox-help ng-if="::to.description"
+	      class="checkbox__help">{{::to.description}}</lx-checkbox-help>
 </div>
