--- a/src/fields/lx-select-img.html
+++ b/src/fields/lx-select-img.html
@@ -18,6 +18,6 @@
 		</lx-select-choices>
 
 	</lx-select>
-	<img style="float:right; width:10%; margin-bottom:40px; margin-top:14px;" ng-src="http://beng.kissthefrog.lan/expContent/{{model[options.key]}}"
-		width="50" height="50" class="img" err-src="img/placeholder_face.svg">
+	<img style="float:right; width:10%; margin-bottom:40px; margin-top:14px;" ng-src="{{filepath }}{{model[options.key]}}"
+		width="50" height="50" class="img" err-src="img/placeholder_img.svg">
 </div>
